baml_language/crates/baml_tests/snapshots/type_builder_test/baml_tests__type_builder_test__03_hir2.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
class user.TopLevelClass {
  a: string
}
enum user.TopLevelEnum {A, B}
function user.Fn() -> string  [llm] {
  baml.llm.call_llm_function(Client { name: "openai/gpt-4o", client_type: baml.llm.ClientType.Primitive, sub_clients: [], retry: null, counter: 0 }, "Fn", map {  })
}
function user.Fn$build_request() -> baml.http.Request  [expr] {
  baml.llm.build_request("Fn", map {  })
}
function user.Fn$render_prompt() -> baml.llm.PromptAst  [expr] {
  baml.llm.render_prompt("Fn", map {  })
}
