baml_language/crates/baml_tests/snapshots/type_builder_test/baml_tests__type_builder_test__04_5_mir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn user.Fn() -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: baml.llm.Client
    let _2: baml.llm.Client[]
    let _3: map<string, unknown>

    bb0: {
        _2 = [];
        _1 = baml.llm.Client { const "openai/gpt-4o", const baml.llm.ClientType.Primitive, copy _2, const null, const 0_i64 };
        _3 = {  };
        _0 = call const fn baml.llm.call_llm_function(copy _1, const "Fn", copy _3) -> [bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

fn user.Fn$build_request() -> baml.http.Request {
    // Locals:
    let _0: baml.http.Request // _0 // return
    let _1: baml.llm.Client
    let _2: baml.llm.Client[]
    let _3: map<string, unknown>

    bb0: {
        _2 = [];
        _1 = baml.llm.Client { const "openai/gpt-4o", const baml.llm.ClientType.Primitive, copy _2, const null, const 0_i64 };
        _3 = {  };
        _0 = call const fn baml.llm.build_request(copy _1, const "Fn", copy _3) -> [bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

fn user.Fn$parse(json: string) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: string // json // param

    bb0: {
        _0 = call const fn baml.llm.parse(const "Fn", copy _1) -> [bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

fn user.Fn$render_prompt() -> baml.llm.PromptAst {
    // Locals:
    let _0: baml.llm.PromptAst // _0 // return
    let _1: baml.llm.Client
    let _2: baml.llm.Client[]
    let _3: map<string, unknown>

    bb0: {
        _2 = [];
        _1 = baml.llm.Client { const "openai/gpt-4o", const baml.llm.ClientType.Primitive, copy _2, const null, const 0_i64 };
        _3 = {  };
        _0 = call const fn baml.llm.render_prompt(copy _1, const "Fn", copy _3) -> [bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        return;
    }
}
