baml_language/crates/baml_tests/snapshots/type_builder_test/baml_tests__type_builder_test__04_7_mir2.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn Fn() -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: map<string, unknown>

    bb0: {
        _1 = {  };
        _0 = call const fn baml.llm.call_llm_function(const "Fn", copy _1) -> [bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        return;
    }
}
