baml_language/crates/baml_tests/snapshots/type_builder_test/baml_tests__type_builder_test__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
function user.Fn() -> string throws never {
  baml.llm.call_llm_function<T>(baml.llm.Client { name: "openai/gpt-4o", client_type: baml.llm.ClientType.Primitive, sub_clients: [], retry: null, counter: 0 }, "Fn", map {  }) : string
}
function user.Fn$render_prompt() -> baml.llm.PromptAst throws never {
  baml.llm.render_prompt(baml.llm.Client { name: "openai/gpt-4o", client_type: baml.llm.ClientType.Primitive, sub_clients: [], retry: null, counter: 0 }, "Fn", map {  }) : baml.llm.PromptAst
}
function user.Fn$build_request() -> baml.http.Request throws never {
  baml.llm.build_request(baml.llm.Client { name: "openai/gpt-4o", client_type: baml.llm.ClientType.Primitive, sub_clients: [], retry: null, counter: 0 }, "Fn", map {  }) : baml.http.Request
}
function user.Fn$parse(json: string) -> string throws never {
  baml.llm.parse<T>("Fn", json) : string
}
class user.TopLevelClass {
  a: string
}
enum user.TopLevelEnum
function user.Fn$parse_stream(sse: baml.http.SseStream) -> baml.llm.Stream<string, null | string> throws never {
  baml.llm.__make_stream(sse, "Fn", baml.llm.Client { name: "openai/gpt-4o", client_type: baml.llm.ClientType.Primitive, sub_clients: [], retry: null, counter: 0 }) : unknown
}
class user.TopLevelClass$stream {
  a: null | string
}
