baml_language/crates/baml_tests/snapshots/type_builder_test/baml_tests__type_builder_test__04_tir2.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
function user.Fn() -> string {
  baml.llm.call_llm_function(Client { name: "openai/gpt-4o", client_type: baml.llm.ClientType.Primitive, sub_clients: [], retry: null, counter: 0 }, "Fn", map {  }) : unknown
  !! 23..68: type mismatch: expected string, got unknown
}
function user.Fn$render_prompt() -> baml.llm.PromptAst {
  baml.llm.render_prompt("Fn", map {  }) : baml.llm.PromptAst
}
function user.Fn$build_request() -> baml.http.Request {
  baml.llm.build_request("Fn", map {  }) : baml.http.Request
}
class user.TopLevelClass {
  a: string
}
enum user.TopLevelEnum
