baml_language/crates/baml_tests/snapshots/type_builder_test/baml_tests__type_builder_test__05_diagnostics2.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== COMPILER2 DIAGNOSTICS ===
  [type] Error: type mismatch: expected string, got unknown
   ╭─[ test.baml:1:24 ]
   │
 1 │ ╭─▶ function Fn() -> string {
   ┆ ┆   
 4 │ ├─▶ }
   │ │       
   │ ╰─────── type mismatch: expected string, got unknown
   │     
   │     Note: Error code: E0001
───╯
