baml_language/crates/baml_tests/snapshots/type_builder_test/baml_tests__type_builder_test__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function user.Fn() -> string {
    alloc_instance baml.llm.Client
    load_const "openai/gpt-4o"
    init_field .name
    load_const baml.llm.ClientType.Primitive
    alloc_variant baml.llm.ClientType
    init_field .client_type
    alloc_array 0
    init_field .sub_clients
    load_const null
    init_field .retry
    load_const 0
    init_field .counter
    load_const "Fn"
    alloc_map 0
    call baml.llm.call_llm_function
    return
}

function user.Fn$build_request() -> baml.http.Request {
    alloc_instance baml.llm.Client
    load_const "openai/gpt-4o"
    init_field .name
    load_const baml.llm.ClientType.Primitive
    alloc_variant baml.llm.ClientType
    init_field .client_type
    alloc_array 0
    init_field .sub_clients
    load_const null
    init_field .retry
    load_const 0
    init_field .counter
    load_const "Fn"
    alloc_map 0
    call baml.llm.build_request
    return
}

function user.Fn$build_request_stream() -> baml.http.Request {
    alloc_instance baml.llm.Client
    load_const "openai/gpt-4o"
    init_field .name
    load_const baml.llm.ClientType.Primitive
    alloc_variant baml.llm.ClientType
    init_field .client_type
    alloc_array 0
    init_field .sub_clients
    load_const null
    init_field .retry
    load_const 0
    init_field .counter
    load_const "Fn"
    alloc_map 0
    call baml.llm.build_request_stream
    return
}

function user.Fn$parse(json: string) -> string {
    load_const "Fn"
    load_var json
    call baml.llm.parse
    return
}

function user.Fn$parse_stream(sse: baml.http.SseStream) -> baml.llm.Stream {
    load_var sse
    load_const "Fn"
    load_const null
    call_indirect
    return
}

function user.Fn$render_prompt() -> baml.llm.PromptAst {
    alloc_instance baml.llm.Client
    load_const "openai/gpt-4o"
    init_field .name
    load_const baml.llm.ClientType.Primitive
    alloc_variant baml.llm.ClientType
    init_field .client_type
    alloc_array 0
    init_field .sub_clients
    load_const null
    init_field .retry
    load_const 0
    init_field .counter
    load_const "Fn"
    alloc_map 0
    call baml.llm.render_prompt
    return
}

function user.Fn$stream() -> baml.llm.Stream {
    alloc_instance baml.llm.Client
    load_const "openai/gpt-4o"
    init_field .name
    load_const baml.llm.ClientType.Primitive
    alloc_variant baml.llm.ClientType
    init_field .client_type
    alloc_array 0
    init_field .sub_clients
    load_const null
    init_field .retry
    load_const 0
    init_field .counter
    load_const "Fn"
    alloc_map 0
    call baml.llm.stream_llm_function
    return
}
