baml_language/crates/baml_tests/snapshots/type_builder_test/baml_tests__type_builder_test__06_codegen2.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function user.Fn() -> string {
    load_const "Fn"
    alloc_map 0
    call baml.llm.call_llm_function
    return
}

function user.Fn$build_request() -> baml.http.Request {
    load_const "Fn"
    alloc_map 0
    call baml.llm.build_request
    return
}

function user.Fn$render_prompt() -> baml.llm.PromptAst {
    load_const "Fn"
    alloc_map 0
    call baml.llm.render_prompt
    return
}
